<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/shape_rectangle_white_rad_10"
    android:paddingVertical="@dimen/size24">

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tv_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/txt_exit"
        android:textColor="#242424"
        android:textSize="@dimen/size16"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tv_description"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/size24"
        android:layout_marginTop="@dimen/size5"
        android:gravity="center"
        android:text="@string/txt_confirm_exit"
        android:textColor="#4B4B4B"
        android:textSize="@dimen/size14"
        app:layout_constraintTop_toBottomOf="@id/tv_title" />


    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tv_yes"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/size12"
        android:layout_marginEnd="@dimen/size13"
        android:background="@drawable/shape_rectangle_white_border_gray_rad_40"
        android:foreground="?selectableItemBackground"
        android:gravity="center"
        android:paddingVertical="@dimen/size8"
        android:text="@string/txt_yes"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/tv_no"
        app:layout_constraintTop_toBottomOf="@id/tv_description" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tv_no"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/size13"
        android:layout_marginEnd="@dimen/size13"
        android:background="@drawable/shape_rectangle_white_border_gray_rad_40"
        android:foreground="?selectableItemBackground"
        android:gravity="center"
        android:paddingVertical="@dimen/size8"
        android:text="@string/txt_no"
        app:layout_constraintBottom_toBottomOf="@id/tv_yes"
        app:layout_constraintEnd_toStartOf="@id/tv_yes"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/tv_yes" />
</androidx.constraintlayout.widget.ConstraintLayout>