<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/shape_rectangle_white_rad_10">

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/ivStar"
        android:layout_width="@dimen/size84"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/size28"
        android:adjustViewBounds="true"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ic_fivestar" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tvTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/size16"
        android:fontFamily="sans-serif-medium"
        android:gravity="center"
        android:paddingHorizontal="@dimen/size30"
        android:text="@string/title_rate"
        android:textColor="@color/black"
        android:textSize="@dimen/size16"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ivStar" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tvContent"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/size8"
        android:gravity="center"
        android:paddingHorizontal="@dimen/size30"
        android:text="@string/rate_content"
        android:textColor="@color/black"
        android:textSize="@dimen/size12"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvTitle" />

    <androidx.appcompat.widget.AppCompatRatingBar
        android:id="@+id/ratingBar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/size16"
        android:maxHeight="@dimen/size36"
        android:minHeight="@dimen/size15"
        android:numStars="5"
        android:progressDrawable="@drawable/bg_rate_app"
        android:rating="0"
        android:stepSize="1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvContent" />

    <View
        android:id="@+id/vLine"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginTop="@dimen/size28"
        android:background="#3C3C3C"
        app:layout_constraintTop_toBottomOf="@+id/ratingBar" />

    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="wrap_content"
        android:layout_height="@dimen/size40"
        android:layout_marginTop="@dimen/size16"
        android:layout_marginBottom="@dimen/size28"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/vLine">

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tvCancel"
            android:layout_width="@dimen/size111"
            android:layout_height="match_parent"
            android:layout_marginEnd="@dimen/size6"
            android:fontFamily="sans-serif-medium"
            android:gravity="center"
            android:text="@string/cancel"
            android:textColor="@color/black"
            android:textSize="@dimen/size14" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tvRate"
            android:layout_width="@dimen/size111"
            android:layout_height="match_parent"
            android:layout_marginStart="@dimen/size6"
            android:fontFamily="sans-serif-medium"
            android:gravity="center"
            android:text="@string/submit"
            android:textColor="#1E1F24"
            android:textSize="@dimen/size14" />


    </androidx.appcompat.widget.LinearLayoutCompat>

</androidx.constraintlayout.widget.ConstraintLayout>