<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/shape_rectangle_white_rad_10"
    android:paddingBottom="20dp">

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/txtDialogTitle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginTop="10dp"
        android:textColor="@android:color/black"
        android:textSize="@dimen/size20"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:text="Confirmation" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/txtDialogMessageGuide1"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="40dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="40dp"
        android:text="@string/txt_open_settings_guide_1"
        android:textColor="@android:color/black"
        android:textSize="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/txtDialogTitle"
        tools:text="This is confirmation message" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/txtDialogMessageGuide2"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="40dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="40dp"
        android:text="@string/txt_open_settings_guide_2"
        android:textColor="@android:color/black"
        android:textSize="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/txtDialogMessageGuide1"
        tools:text="This is confirmation message" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/txtDialogMessage"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="40dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="40dp"
        android:textColor="@android:color/black"
        android:textSize="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/txtDialogMessageGuide2"
        tools:text="This is confirmation message" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/btnDialogConfirmYes"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="20dp"
        android:ellipsize="end"
        android:maxLines="1"
        android:text="@string/txt_open_settings"
        android:textAllCaps="true"
        android:textColor="@android:color/black"
        android:textSize="18dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/txtDialogMessage" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/centerVerticalGuideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_begin="206dp" />
</androidx.constraintlayout.widget.ConstraintLayout>