<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/gray05"
    android:tag="layout/activity_use_0">

    <RelativeLayout
        android:id="@+id/toolbar_language"
        android:layout_width="match_parent"
        android:layout_height="@dimen/size50"
        android:minHeight="?attr/actionBarSize"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/iv_back"
            android:layout_width="@dimen/size50"
            android:layout_height="@dimen/size50"
            android:src="@drawable/ic_back"
            app:tint="@color/black"
            android:padding="@dimen/size13"
            />

        <TextView
            android:text="@string/how_to_use"
            style="@style/TextView.Header.Header1"
            android:layout_centerInParent="true"
            />

    </RelativeLayout>


    <androidx.cardview.widget.CardView
        android:id="@+id/card_view_1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/size16"
        android:layout_marginLeft="@dimen/size16"
        android:layout_marginTop="@dimen/size15"
        android:layout_marginRight="@dimen/size16"
        app:cardCornerRadius="@dimen/size16"
        app:cardElevation="@dimen/size8"
        app:layout_constraintTop_toBottomOf="@+id/toolbar_language">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="center"
            android:orientation="horizontal"
            android:paddingHorizontal="@dimen/size16"
            android:paddingVertical="@dimen/size10"
            android:paddingLeft="@dimen/size16"
            android:paddingTop="@dimen/size10"
            android:paddingRight="@dimen/size16"
            android:paddingBottom="@dimen/size10">

            <androidx.appcompat.widget.AppCompatImageView
                android:layout_width="@dimen/size30"
                android:layout_height="@dimen/size30"
                android:src="@drawable/ic_use1" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/size16"
                android:layout_weight="1"
                android:text="@string/use_title_1"
                android:textColor="@color/black"
                android:textSize="@dimen/size14" />
        </LinearLayout>
    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/card_view_2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/size16"
        android:layout_marginLeft="@dimen/size16"
        android:layout_marginTop="@dimen/size10"
        android:layout_marginRight="@dimen/size16"
        app:cardCornerRadius="@dimen/size16"
        app:cardElevation="@dimen/size8"
        app:layout_constraintTop_toBottomOf="@+id/card_view_1">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="center"
            android:orientation="horizontal"
            android:paddingHorizontal="@dimen/size16"
            android:paddingVertical="@dimen/size10"
            android:paddingLeft="@dimen/size16"
            android:paddingTop="@dimen/size10"
            android:paddingRight="@dimen/size16"
            android:paddingBottom="@dimen/size10">

            <androidx.appcompat.widget.AppCompatImageView
                android:layout_width="@dimen/size30"
                android:layout_height="@dimen/size30"
                android:src="@drawable/ic_use2" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/size16"
                android:layout_weight="1"
                android:text="@string/use_title_2"
                android:textColor="@color/black"
                android:textSize="@dimen/size14" />
        </LinearLayout>
    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/card_view_3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/size16"
        android:layout_marginLeft="@dimen/size16"
        android:layout_marginTop="@dimen/size10"
        android:layout_marginRight="@dimen/size16"
        app:cardCornerRadius="@dimen/size16"
        app:cardElevation="@dimen/size8"
        app:layout_constraintTop_toBottomOf="@+id/card_view_2">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="center"
            android:orientation="horizontal"
            android:paddingHorizontal="@dimen/size16"
            android:paddingVertical="@dimen/size10"
            android:paddingLeft="@dimen/size16"
            android:paddingTop="@dimen/size10"
            android:paddingRight="@dimen/size16"
            android:paddingBottom="@dimen/size10">

            <androidx.appcompat.widget.AppCompatImageView
                android:layout_width="@dimen/size30"
                android:layout_height="@dimen/size30"
                android:src="@drawable/ic_use3" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/size16"
                android:layout_weight="1"
                android:text="@string/use_title_3"
                android:textColor="@color/black"
                android:textSize="@dimen/size14" />
        </LinearLayout>
    </androidx.cardview.widget.CardView>


    <com.facebook.shimmer.ShimmerFrameLayout
        android:id="@+id/fl_adplaceholder"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        app:layout_constraintBottom_toBottomOf="parent"
        >
        <include
            android:id="@+id/native_ad_view"
            layout="@layout/ad_unified"/>

    </com.facebook.shimmer.ShimmerFrameLayout>

</androidx.constraintlayout.widget.ConstraintLayout>
